complete Day04 Part II - working but can be improved